tests/fixtures/fail/constructor_missing_field.sc
let Pair = struct { left: i32, right: i32 }

let main(): i32 = {
  let pair = Pair { left: 42 }
  pair.left
}
